--- a/packages/mediacenter/plex/plexht/build
+++ b/packages/mediacenter/plex/plexht/build
@@ -28,7 +28,7 @@ SRC_DIR=`pwd`
 
 [ ! -d build ] && mkdir build 
 cd build 
-#[ -f Makefile ] && rm -rf *
+[ -f Makefile ] && rm -rf *
 
 
 MAKEFLAGS=-j1
