--- a/config/version.in
+++ b/config/version.in
@@ -1,8 +1,8 @@
 # VERSION: set full version, use "devel" for development version
-  OPENELEC_VERSION="2.99.3"
+  OPENELEC_VERSION="2.99.2"
 
 # RASPLEX_VERSION: The version of rasplex
-  RASPLEX_VERSION="0.1.15"
+  RASPLEX_VERSION="SET_RASPLEXVERSION"
 
 # OS_VERSION: OS Version
   OS_VERSION="3.0"
