--- a/packages/debug/coreutils/build
+++ b/packages/debug/coreutils/build
@@ -1,3 +1,5 @@
+#!/bin/sh
+
 ################################################################################
 #      This file is part of OpenELEC - http://www.openelec.tv
 #      Copyright (C) 2009-2012 Stephan Raue (stephan@openelec.tv)
@@ -18,19 +20,25 @@
 #  http://www.gnu.org/copyleft/gpl.html
 ################################################################################
 
-PKG_NAME="oprofile"
-PKG_VERSION="0.9.8"
-PKG_REV="1"
-PKG_ARCH="any"
-PKG_LICENSE="BSD"
-PKG_SITE="http://sourceforge.net/projects/oprofile/"
-PKG_URL="$SOURCEFORGE_SRC/oprofile/oprofile/$PKG_NAME-$PKG_VERSION/$PKG_NAME-$PKG_VERSION.tar.gz"
-PKG_DEPENDS="popt coreutils"
-PKG_BUILD_DEPENDS="toolchain popt coreutils"
-PKG_PRIORITY="optional"
-PKG_SECTION="debug"
-PKG_SHORTDESC="strace: Trace system calls and signals"
-PKG_LONGDESC="In the simplest case strace runs the specified command until it exits. It intercepts and records the system calls which are called by a process and the signals which are received by a process. The name of each system call, its arguments and its return value are printed on standard error or to the file specified with the -o option."
-PKG_IS_ADDON="no"
+. config/options $1
 
-PKG_AUTORECONF="no"
+cd $PKG_BUILD
+echo "DALE READ ME"
+
+ABS_PKG_BUILD=`pwd`
+cd "../image/system"
+SYSTEMDIR=`pwd`
+echo "System dir:"
+echo $SYSTEMDIR
+cd $ABS_PKG_BUILD
+
+
+./configure  \
+            --prefix=$SYSTEMDIR \
+            --host=$TARGET_NAME \
+            --build=$HOST_NAME 
+
+#the build fails, but it gets far enough for expr which is all we need
+echo "Sit tight... this is a huge hack"
+bash -c "make;echo 'Hack complete'"
+
