--- a/packages/mediacenter/plex/plexht/build
+++ b/packages/mediacenter/plex/plexht/build
@@ -30,11 +30,12 @@ SRC_DIR=`pwd`
 cd build 
 [ -f Makefile ] && rm -rf *
 
-if [ "$DEBUG" = yes ]; then
-      CMAKE_BUILD_TYPE="DEBUG"
-else
-      CMAKE_BUILD_TYPE="RELEASE"
-fi
+# PlexHT will crash on start without debug set. See card #176
+#if [ "$DEBUG" = yes ]; then
+      CMAKE_BUILD_TYPE="Debug"
+#else
+#      CMAKE_BUILD_TYPE="Release"
+#fi
 
 
 MAKEFLAGS=-j1
