Use `config` folder for build, instead of `build`. The install script expects to find files in `config`.

--- a/packages/mediacenter/plex/plexht/build
+++ b/packages/mediacenter/plex/plexht/build
@@ -39,8 +39,8 @@
 
 PLEX=$ROOT/$BUILD/$PKG_NAME-$PKG_VERSION
 
-mkdir -p $PLEX/build
-cd $PLEX/build
+mkdir -p $PLEX/config
+cd $PLEX/config
 rm -rf *
 
 cmake -DCMAKE_BUILD_TYPE=Debug \
